# MergeQt

./: CMakeLists.txt  README.md  VersionInfo.rc.in  main.cpp
.github/workflows/: macos.yml  windows.yml
docs/: architecture-overview.md  lifecycle-management.md
scripts/: translate_ts.py
src/app/application/: appcontext.cpp  appcontext.h  applicationbootstrap.cpp  applicationbootstrap.h  applicationlaunchrequest.cpp  applicationlaunchrequest.h
src/app/compare/: binarycomparesessionservice.cpp  binarycomparesessionservice.h  comparesessionservice.cpp  comparesessionservice.h  comparetypes.cpp  comparetypes.h  foldercomparereportformatter.cpp  foldercomparereportformatter.h  foldercomparesessionservice.cpp  foldercomparesessionservice.h  imagecomparesessionservice.cpp  imagecomparesessionservice.h
src/app/logging/: logger.cpp  logger.h
src/app/settings/: propertyhelper.h  settingsservice.cpp  settingsservice.h
src/core/binary/: binarycomparetypes.h
src/core/folder/: foldercompareengine.cpp  foldercompareengine.h  foldercomparetypes.h  folderoperationexecutor.cpp  folderoperationexecutor.h  folderoperationplanner.cpp  folderoperationplanner.h
src/core/image/: imagecomparetypes.h
src/core/project/: projecttypes.h
src/core/text/: lineardiffengine.cpp  lineardiffengine.h  textcomparetypes.h  textdocumentloader.cpp  textdocumentloader.h  textnormalizer.cpp  textnormalizer.h
src/platform/path/: pathservice.cpp  pathservice.h
src/ui/frontend/: frontendfactory.cpp  frontendfactory.h  uifrontend.h
src/ui/widgets/: applicationappearance.cpp  applicationappearance.h  binarycomparetabpage.cpp  binarycomparetabpage.h  compareinputheader.cpp  compareinputheader.h  comparepagefactory.cpp  comparepagefactory.h  comparetabpage.h  foldercomparetabpage.cpp  foldercomparetabpage.h  imagecomparetabpage.cpp  imagecomparetabpage.h  linenumbertextedit.cpp  linenumbertextedit.h  mainwindow.cpp  mainwindow.h  opencomparedialog.cpp  opencomparedialog.h  placeholdercomparetabpage.cpp  placeholdercomparetabpage.h  settingsdialog.cpp  settingsdialog.h  textcomparetabpage.cpp  textcomparetabpage.h  textdiffoverviewbar.cpp  textdiffoverviewbar.h  widgetsfrontend.cpp  widgetsfrontend.h  workspacestartpage.cpp  workspacestartpage.h
tests/app/application/: app_application_launch_request_test.cpp
tests/app/compare/: app_binary_compare_session_test.cpp  app_image_compare_session_test.cpp  app_recent_compare_test.cpp
tests/core/folder/: core_folder_compare_test.cpp  core_folder_operation_planner_test.cpp
tests/core/text/: core_text_compare_test.cpp
tests/ui/: linenumbertextedit_sync_test.cpp  textcompare_alignment_test.cpp
translations/: MergeQt_de_DE.ts  MergeQt_en_US.ts  MergeQt_es_ES.ts  MergeQt_fr_FR.ts  MergeQt_ja_JP.ts  MergeQt_ko_KR.ts  MergeQt_ru_RU.ts  MergeQt_zh_CN.ts  MergeQt_zh_TW.ts
